--- a/read-side/src/main/resources/application.conf
+++ b/read-side/src/main/resources/application.conf
@@ -1,7 +1,13 @@
 {
-  "jdbcDriver": "org.postgresql.Driver"
-  "jdbcUrl": "jdbc:postgresql:ptt"
-  "dbUsername": "reader"
-  "dbPassword": "reader"
-  "schema": "ptt_read_model"
+  "databaseConfiguration": {
+    "jdbcDriver": "org.postgresql.Driver"
+    "jdbcUrl": "jdbc:postgresql:ptt"
+    "dbUsername": "reader"
+    "dbPassword": "reader"
+    "schema": "ptt_read_model"
+  }
+  "webConfiguration": {
+    "host": "localhost"
+    "port": 8081
+  }
 }
