--- a/gateway/src/main/resources/application.conf
+++ b/gateway/src/main/resources/application.conf
@@ -1,5 +1,9 @@
 host = "localhost"
 port = 8080
+authorization = {
+  jwt-secret = "local-secret"
+  jwt-algorithm = "HS256"
+}
 read-side-service = {
   host = "localhost"
   port = 8081
