Write-side: repositories for projects on write and read side

--- a/write-side/src/main/resources/application.conf
+++ b/write-side/src/main/resources/application.conf
@@ -1,7 +1,15 @@
 {
+  "databaseConfiguration": {
+    "jdbcDriver": "org.postgresql.Driver"
+    "jdbcUrl": "jdbc:postgresql:ptt"
+    "dbUsername": "writer"
+    "dbPassword": "writer"
+  }
   "webConfiguration": {
     "host": "localhost"
     "port": 8082
   }
-  "gatewayAddress": "http://localhost:8080"
+  "gatewayConfiguration": {
+    "address": "http://localhost:8080"
+  }
 }
