Fix composing layers in write side service
Use `Resource` starting in service layer until main method.
Without that thread pool for doobie transactor was closing after creating
services.

--- a/write-side/src/main/resources/application.conf
+++ b/write-side/src/main/resources/application.conf
@@ -8,6 +8,7 @@
   "webConfiguration": {
     "host": "localhost"
     "port": 8082
+    "threadPoolSize": 8
   }
   "gatewayConfiguration": {
     "address": "http://localhost:8080"
