Deployment to local Kubernetes cluster
Adapt configuration of applications to deployment in cluster (add
environment variables to configuration files).

Helm chart with script to deploy it into local kubernetes cluster in docker
(kind).

Closes #3

--- a/gateway/src/main/resources/application.conf
+++ b/gateway/src/main/resources/application.conf
@@ -1,14 +1,21 @@
 host = "localhost"
+host = ${?GATEWAY_LISTEN_HOST}
 port = 8080
+port = ${?GATEWAY_PORT}
 authorization = {
   jwt-secret = "local-secret"
+  jwt-secret = ${?GATEWAY_AUTHORIZATION_JWT_SECRET}
   jwt-algorithm = "HS256"
 }
 read-side-service = {
   host = "localhost"
+  host = ${?READ_SERVICE_HOST}
   port = 8081
+  port = ${?READ_SERVICE_PORT}
 }
 write-side-service = {
   host = "localhost"
+  host = ${?WRITE_SERVICE_HOST}
   port = 8082
+  port = ${?WRITE_SERVICE_PORT}
 }
