--- a/read-side/src/main/resources/application.conf
+++ b/read-side/src/main/resources/application.conf
@@ -2,12 +2,17 @@
   "databaseConfiguration": {
     "jdbcDriver": "org.postgresql.Driver"
     "jdbcUrl": "jdbc:postgresql:ptt"
+    "jdbcUrl": ${?READSIDE_JDBC_URL}
     "dbUsername": "reader"
+    "dbUsername": ${?READSIDE_JDBC_USERNAME}
     "dbPassword": "reader"
+    "dbPassword": ${?READSIDE_JDBC_PASSWORD}
     "schema": "ptt_read_model"
   }
   "webConfiguration": {
     "host": "localhost"
+    "host": ${?READSIDE_LISTEN_HOST}
     "port": 8081
+    "port": ${?READSIDE_LISTEN_PORT}
   }
 }
