--- a/write-side/src/main/resources/application.conf
+++ b/write-side/src/main/resources/application.conf
@@ -2,15 +2,22 @@
   "databaseConfiguration": {
     "jdbcDriver": "org.postgresql.Driver"
     "jdbcUrl": "jdbc:postgresql:ptt"
+    "jdbcUrl": ${?WRITESIDE_JDBC_URL}
     "dbUsername": "writer"
+    "dbUsername": ${?WRITESIDE_JDBC_USERNAME}
     "dbPassword": "writer"
+    "dbPassword": ${?WRITESIDE_JDBC_PASSWORD}
   }
   "webConfiguration": {
     "host": "localhost"
+    "host": ${?WRITESIDE_LISTEN_HOST}
     "port": 8082
+    "port": ${?WRITESIDE_LISTEN_PORT}
     "threadPoolSize": 8
+    "threadPoolSize": ${?WRITESIDE_THREAD_POOL_SIZE}
   }
   "gatewayConfiguration": {
     "address": "http://localhost:8080"
+    "address": ${?API_URL}
   }
 }
